parseMedia and parseMediaPaths
- Cleaned out some looping code
- Added a new function parseMediaPaths to parse individual media
objects and build an array with paths to individual media objects.

--- a/example.html
+++ b/example.html
@@ -13,11 +13,13 @@
                 dataType: "jsonp",
                 request: {
                     vhost: 269,
+                    limit: 50,
                     method: "media.getFiles"
                 },
                 response: {
                     mediaObject: 'result.data',
-                    mediaURL: 'publicUrl'
+                    mediaURL: 'publicUrl',
+                    mediaURLSuffix: '/15'
                 }
             });
         </script>
